[package]
name = "lendingpool"
version = "0.1.0"
authors = ["Bandot"]
edition = "2018"

[dependencies]
ink_primitives = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false, rev ="fd94d38" }
ink_metadata = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true, rev ="fd94d38"}
ink_env = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false,rev ="fd94d38" }
ink_storage = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false,rev ="fd94d38" }
ink_lang = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false ,rev ="fd94d38"}
ink_prelude = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false ,rev ="fd94d38"}

scale = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
scale-info = { version = "0.6.0", default-features = false, features = ["derive"], optional = true }

ierc20 = { version = "0.1.0", path = "ierc20", default-features = false, features = ["ink-as-dependency"] }
price = { version = "0.1.0", path = "price", default-features = false, features = ["ink-as-dependency"] }

# Should be removed once bitvecto-rs/bitvec#105 is resolved
funty = "=1.1.0"

[lib]
name = "lendingpool"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info/std",

    "ierc20/std",
    "price/std",
]
ink-as-dependency = []

[profile.release]
overflow-checks = false

[workspace]
members = [
    "ierc20",
    "price",
]
