[package]
name = "ierc20"
version = "0.1.0"
authors = ["Bandot"]
edition = "2018"

[dependencies]
ink_primitives = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false,rev ="fd94d38" }
ink_metadata = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true ,rev ="fd94d38"}
ink_env = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false,rev ="fd94d38" }
ink_storage = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false ,rev ="fd94d38"}
ink_lang = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false,rev ="fd94d38" }
ink_prelude = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false ,rev ="fd94d38"}

scale = { package = "parity-scale-codec", version = "2.0", default-features = false, features = ["derive"] }
scale-info = { version = "0.6.0", default-features = false, features = ["derive"], optional = true }

funty = "=1.1"

[lib]
name = "ierc20"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    # Used for ABI generation.
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
]
ink-as-dependency = []
